aws-sdk-compile-checks-usage/tests/fails/multiple_clients_with_issues_same_method_name.stderr
error: method `create_project` (from rekognition) is missing required argument(s): `project_name`
 --> tests/fails/multiple_clients_with_issues_same_method_name.rs:8:32
  |
8 |     let _ = rekognition_client.create_project()
  |                                ^^^^^^^^^^^^^^

error: method `create_project` (from evidently) is missing required argument(s): `name`
 --> tests/fails/multiple_clients_with_issues_same_method_name.rs:5:30
  |
5 |     let _ = evidently_client.create_project()
  |                              ^^^^^^^^^^^^^^
